fixing specs.yml

--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -6,9 +6,10 @@ on:
 
 jobs:
   # TODO: Environment variables?
-  RAILS_MASTER_KEY: ${{ secrets.SuperSecret }}
   build:
     runs-on: '${{ matrix.os }}'
+    env:
+      RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
     strategy:
       matrix:
         os:
@@ -20,7 +21,7 @@ jobs:
           path: |-
             node_modules
             vendor/bundle
-          key: '${{ runner.os }}-${{ hashFiles(RAILS_MASTER_KEY) }}'
+          key: '${{ runner.os }}-${{ hashFiles(''TODO'') }}'
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
         with:
